fix: 修复一些Java警告，优化预渲染服务